clean up query string matching and provider state values