@@ -1,5 +1,9 @@
 package bio.terra.workspace.pact;
 
+import static au.com.dius.pact.consumer.dsl.DslPart.UUID_REGEX;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 
 import au.com.dius.pact.consumer.MockServer;
 import au.com.dius.pact.consumer.dsl.PactDslJsonArray;
@@ -20,22 +24,13 @@ import bio.terra.workspace.service.workspace.WorkspaceService;
 import bio.terra.workspace.service.workspace.model.CloudPlatform;
 import bio.terra.workspace.service.workspace.model.Workspace;
 import bio.terra.workspace.service.workspace.model.WorkspaceStage;
+import java.util.*;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.http.HttpStatus;
-
-import static au.com.dius.pact.consumer.dsl.DslPart.UUID_REGEX;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Tag("pact-test")
 @ExtendWith(PactConsumerTestExt.class)
@@ -48,32 +43,63 @@ public class TpsApiTest {
   // since our client doesn't include the encoding in the content type header
   static Map<String, String> contentTypeJsonHeader = Map.of("Content-Type", "application/json");
 
-  // TODO don't use a random value
-  UUID objectId = UUID.randomUUID();
-  UUID secondObjectId = UUID.randomUUID();
+  // The policy ids aren't significant - hardcoded instead of random to avoid changing the pact on
+  // every run
+  static UUID existingPolicyId = UUID.fromString("bea1edd0-a8e6-4d60-a613-e8e065f21616");
+  static String existingPolicyState = "an existing policy";
+  static String existingPolicyProviderStateValue = "${policyId}";
+  static UUID secondPolicyId = UUID.fromString("a254714b-4519-4ce4-ad87-19a7143376f4");
+  // TODO: better second policy state name
+  static String secondPolicyState = "another existing policy";
 
-  static String existingWorkspacePolicyState = "an existing workspace policy";
+  // uuid
+  // state
+  // uuid provider value string
 
-  static PactDslJsonBody tpsPolicyInputsObjectShape = new PactDslJsonBody().object(
-      "inputs",
-      new PactDslJsonArray().eachArrayLike().object().stringType("namespace").stringType("name").closeObject()
-  );
+  // A regex that matches any value of CloudPlatform that has a tps string
+  static String cloudPlatformTpsRegex =
+      Arrays.stream(CloudPlatform.values())
+          .filter(p -> p != CloudPlatform.ANY) // ANY doesn not have a valid TPS string
+          .map(CloudPlatform::toTps)
+          .collect(Collectors.joining("|"));
 
-  static PactDslJsonBody workspacePolicyCreateRequestShape = new PactDslJsonBody()
-      .uuid("objectId")
-      .stringMatcher(
-          "objectType",
-          Arrays.stream(TpsObjectType.values()).map(TpsObjectType::getValue).collect(Collectors.joining("|"))
-      )
-      .stringMatcher(
-          "component",
-          Arrays.stream(TpsComponent.values()).map(TpsComponent::getValue).collect(Collectors.joining("|"))
-      )
-      .object("attributes", tpsPolicyInputsObjectShape);
+  // A regex that matches any value of TpsUpdateMode
+  static String updateModeRegex =
+      Arrays.stream(TpsUpdateMode.values())
+          .map(TpsUpdateMode::getValue)
+          .collect(Collectors.joining("|"));
 
+  // A regex that matches any value of TpsComponent
+  static String tpsComponentRegex =
+      Arrays.stream(TpsComponent.values())
+          .map(TpsComponent::getValue)
+          .collect(Collectors.joining("|"));
+
+  // A regex that matches any value of TpsObjectType
+  static String tpsObjectTypeRegex =
+      Arrays.stream(TpsObjectType.values())
+          .map(TpsObjectType::getValue)
+          .collect(Collectors.joining("|"));
+
+  static PactDslJsonBody tpsPolicyInputsObjectShape =
+      new PactDslJsonBody()
+          .object(
+              "inputs",
+              new PactDslJsonArray()
+                  .eachArrayLike()
+                  .object()
+                  .stringType("namespace")
+                  .stringType("name")
+                  .closeObject());
+
+  static PactDslJsonBody workspacePolicyCreateRequestShape =
+      new PactDslJsonBody()
+          .uuid("objectId")
+          .stringMatcher("objectType", tpsObjectTypeRegex)
+          .stringMatcher("component", tpsComponentRegex)
+          .object("attributes", tpsPolicyInputsObjectShape);
 
   TpsApiDispatch dispatch;
-
 
   @BeforeEach
   void setup(MockServer mockServer) throws Exception {
@@ -84,7 +110,6 @@ public class TpsApiTest {
     featureConfig.setTpsEnabled(true);
     dispatch = new TpsApiDispatch(featureConfig, tpsConfig);
   }
-
 
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact createPaoWithNoExistingPolicy(PactDslWithProvider builder) {
@@ -99,23 +124,22 @@ public class TpsApiTest {
         .toPact();
   }
 
-
   @Test
   @PactTestFor(pactMethod = "createPaoWithNoExistingPolicy")
   public void testCreatingAPolicyWithNoExistingPolicy() throws Exception {
     dispatch.createPao(
         UUID.randomUUID(),
-        new TpsPolicyInputs().inputs(List.of(new TpsPolicyInput().name("test_name").namespace("test_namespace"))),
+        new TpsPolicyInputs()
+            .inputs(List.of(new TpsPolicyInput().name("test_name").namespace("test_namespace"))),
         TpsComponent.WSM,
-        TpsObjectType.WORKSPACE
-    );
+        TpsObjectType.WORKSPACE);
   }
 
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact createPaoWithAPreexistingPolicy(PactDslWithProvider builder) {
     return builder
-        .given(existingWorkspacePolicyState)
-        .uponReceiving("A request to create a policy")
+        .given(existingPolicyState)
+        .uponReceiving("A request to create a policy that already exists")
         .method("POST")
         .path("/api/policy/v1alpha1/pao")
         .body(workspacePolicyCreateRequestShape)
@@ -130,68 +154,66 @@ public class TpsApiTest {
   public void creatingAPolicyThatAlreadyExists() {
     assertThrows(
         PolicyConflictException.class,
-        () -> dispatch.createPao(
-            objectId,
-            new TpsPolicyInputs().inputs(List.of(new TpsPolicyInput().name("test_name").namespace("test_namespace"))),
-            TpsComponent.WSM,
-            TpsObjectType.WORKSPACE
-        )
-    );
+        () ->
+            dispatch.createPao(
+                existingPolicyId,
+                new TpsPolicyInputs()
+                    .inputs(
+                        List.of(
+                            new TpsPolicyInput().name("test_name").namespace("test_namespace"))),
+                TpsComponent.WSM,
+                TpsObjectType.WORKSPACE));
   }
 
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact deletePaoThatExists(PactDslWithProvider builder) {
     return builder
-        .given(existingWorkspacePolicyState)
+        .given(existingPolicyState)
         .uponReceiving("A request to delete a policy")
         .method("DELETE")
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}",
-            "/api/policy/v1alpha1/pao/%s".formatted(objectId))
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyId))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .toPact();
   }
 
-
   @Test
   @PactTestFor(pactMethod = "deletePaoThatExists")
   public void deletingAnExistingPolicy() throws Exception {
-    dispatch.deletePao(objectId);
+    dispatch.deletePao(existingPolicyId);
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
-  public RequestResponsePact getPaoWithAnExistingWorkspacePolicy(PactDslWithProvider builder) {
-    var policyResponseShape = new PactDslJsonBody()
-        .valueFromProviderState("objectId", "${objectId}", objectId)
-        .stringValue("component", TpsComponent.WSM.getValue())
-        .stringValue("objectType", TpsObjectType.WORKSPACE.getValue())
-        .object("effectiveAttributes", tpsPolicyInputsObjectShape)
-        .object("attributes", tpsPolicyInputsObjectShape);
+  public RequestResponsePact getPaoWithAnExistingPolicy(PactDslWithProvider builder) {
+    var policyResponseShape =
+        new PactDslJsonBody()
+            .valueFromProviderState("objectId", existingPolicyProviderStateValue, existingPolicyId)
+            .stringMatcher("component", tpsComponentRegex)
+            .stringMatcher("objectType", tpsObjectTypeRegex)
+            .object("effectiveAttributes", tpsPolicyInputsObjectShape)
+            .object("attributes", tpsPolicyInputsObjectShape);
 
     return builder
-        .given(existingWorkspacePolicyState)
+        .given(existingPolicyState)
         .uponReceiving("A request to retrieve a policy")
         .method("GET")
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}",
-            String.format("/api/policy/v1alpha1/pao/%s", objectId))
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyId))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(policyResponseShape)
         .toPact();
   }
 
-
   @Test
-  @PactTestFor(pactMethod = "getPaoWithAnExistingWorkspacePolicy")
-  public void retrievingAnExistingWorkspacePolicy() throws Exception {
-    var result = dispatch.getPao(objectId);
+  @PactTestFor(pactMethod = "getPaoWithAnExistingPolicy")
+  public void retrievingAnExistingPolicy() throws Exception {
+    var result = dispatch.getPao(existingPolicyId);
     assertNotNull(result);
-    assertEquals(TpsComponent.WSM, result.getComponent());
-    assertEquals(TpsObjectType.WORKSPACE, result.getObjectType());
-    assertEquals(objectId, result.getObjectId());
+    assertEquals(existingPolicyId, result.getObjectId());
     assertNotNull(result.getAttributes());
     assertNotNull(result.getAttributes().getInputs());
     var inputs = result.getAttributes().getInputs();
@@ -204,7 +226,6 @@ public class TpsApiTest {
     assertFalse(policy.getNamespace().isEmpty());
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact getPaoThatDoesNotExist(PactDslWithProvider builder) {
     return builder
@@ -216,155 +237,141 @@ public class TpsApiTest {
         .toPact();
   }
 
-
   @Test
   @PactTestFor(pactMethod = "getPaoThatDoesNotExist")
   public void retrievingAPolicyThatDoesNotExist() {
-    assertThrows(PolicyServiceNotFoundException.class, () -> dispatch.getPao(objectId));
+    assertThrows(PolicyServiceNotFoundException.class, () -> dispatch.getPao(existingPolicyId));
   }
-
-  /*
-  TODO:
-   test different update modes
-          we use TpsUpdateMode.FAIL_ON_CONFLICT, and TpsUpdateMode.DRY_RUN
-          ENFORCE_CONFLICT is not found in the project
-   */
 
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact linkPaoWhenBothExist(PactDslWithProvider builder) {
-    var linkRequestShape = new PactDslJsonBody()
-        .valueFromProviderState("sourceObjectId", "${secondObjectId}", secondObjectId)
-        .stringMatcher("updateMode",
-            Arrays.stream(TpsUpdateMode.values()).map(TpsUpdateMode::getValue).collect(Collectors.joining("|"))
-        );
-    var linkResponseShape = new PactDslJsonBody()
-        .booleanType("updateApplied")
-        .object("conflicts", new PactDslJsonArray())
-        .object("resultingPao");
+    var linkRequestShape =
+        new PactDslJsonBody()
+            .valueFromProviderState("sourceObjectId", "${secondObjectId}", secondPolicyId)
+            .stringMatcher("updateMode", updateModeRegex);
+    var linkResponseShape =
+        new PactDslJsonBody()
+            .booleanType("updateApplied")
+            .object("conflicts", new PactDslJsonArray())
+            .object("resultingPao");
 
     return builder
-        .given(existingWorkspacePolicyState)
-        // TODO: better second policy state
-        .given("another existing policy")
+        .given(existingPolicyState)
+        .given(secondPolicyState)
         .uponReceiving("A request to link the policies")
         .method("POST")
         .headers(contentTypeJsonHeader)
         .body(linkRequestShape)
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}/link",
-            String.format("/api/policy/v1alpha1/pao/%s/link", objectId))
+            "/api/policy/v1alpha1/pao/$s/link".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s/link".formatted(existingPolicyId))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(linkResponseShape)
         .toPact();
   }
-
 
   @Test
   @PactTestFor(pactMethod = "linkPaoWhenBothExist")
   public void linkTwoExistingPaosWithNoConflicts() throws Exception {
-    var result = dispatch.linkPao(objectId, secondObjectId, TpsUpdateMode.FAIL_ON_CONFLICT);
+    var result = dispatch.linkPao(existingPolicyId, secondPolicyId, TpsUpdateMode.FAIL_ON_CONFLICT);
     assertNotNull(result);
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact mergePaoWhenBothExist(PactDslWithProvider builder) {
-    var linkRequestShape = new PactDslJsonBody()
-        .valueFromProviderState("sourceObjectId", "${secondObjectId}", secondObjectId)
-        .stringMatcher("sourceObjectId", UUID_REGEX)
-        .stringMatcher("updateMode",
-            Arrays.stream(TpsUpdateMode.values()).map(TpsUpdateMode::getValue).collect(Collectors.joining("|"))
-        );
-    var linkResponseShape = new PactDslJsonBody()
-        .booleanType("updateApplied")
-        .object("conflicts", new PactDslJsonArray())
-        .object("resultingPao");
+    var linkRequestShape =
+        new PactDslJsonBody()
+            .valueFromProviderState("sourceObjectId", "${secondObjectId}", secondPolicyId)
+            .stringMatcher("sourceObjectId", UUID_REGEX)
+            .stringMatcher("updateMode", updateModeRegex);
+    var linkResponseShape =
+        new PactDslJsonBody()
+            .booleanType("updateApplied")
+            .object("conflicts", new PactDslJsonArray())
+            .object("resultingPao");
 
     return builder
-        .given(existingWorkspacePolicyState)
-        .given("another existing policy")
+        .given(existingPolicyState)
+        .given(secondPolicyState)
         .uponReceiving("A request to link the policies")
         .method("POST")
         .headers(contentTypeJsonHeader)
         .body(linkRequestShape)
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}/merge",
-            String.format("/api/policy/v1alpha1/pao/%s/merge", objectId))
+            "/api/policy/v1alpha1/pao/%s/merge".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s/merge".formatted(existingPolicyId))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(linkResponseShape)
         .toPact();
   }
 
-
   @Test
   @PactTestFor(pactMethod = "mergePaoWhenBothExist")
   public void mergingTwoExistingPaos() throws Exception {
-    var result = dispatch.mergePao(objectId, secondObjectId, TpsUpdateMode.FAIL_ON_CONFLICT);
+    var result =
+        dispatch.mergePao(existingPolicyId, secondPolicyId, TpsUpdateMode.FAIL_ON_CONFLICT);
     assertNotNull(result);
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact replacePaoThatExists(PactDslWithProvider builder) {
-    var updateRequestShape = new PactDslJsonBody()
-        .object("newAttributes", tpsPolicyInputsObjectShape)
-        .stringMatcher("updateMode",
-            Arrays.stream(TpsUpdateMode.values()).map(TpsUpdateMode::getValue).collect(Collectors.joining("|"))
-        );
-    var updateResponseShape = new PactDslJsonBody()
-        .booleanType("updateApplied")
-        .object("conflicts", new PactDslJsonArray())
-        .object("resultingPao"); // TpsPaoGetResult
+    var updateRequestShape =
+        new PactDslJsonBody()
+            .object("newAttributes", tpsPolicyInputsObjectShape)
+            .stringMatcher("updateMode", updateModeRegex);
+    var updateResponseShape =
+        new PactDslJsonBody()
+            .booleanType("updateApplied")
+            .object("conflicts", new PactDslJsonArray())
+            .object("resultingPao"); // TpsPaoGetResult
     return builder
-        .given(existingWorkspacePolicyState)
+        .given(existingPolicyState)
         .uponReceiving("A request to update a policy")
         .method("PUT")
         .body(updateRequestShape)
         .headers(contentTypeJsonHeader)
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}",
-            "/api/policy/v1alpha1/pao/%s".formatted(objectId))
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyId))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(updateResponseShape)
         .toPact();
   }
 
-
   @Test
   @PactTestFor(pactMethod = "replacePaoThatExists")
   public void replacingAnExistingPaoWithNoConflicts() throws Exception {
-    var newInputs = new TpsPolicyInputs().inputs(List.of(
-        new TpsPolicyInput().name("new_name").namespace("new_namespace")
-    ));
-    var result = dispatch.replacePao(objectId, newInputs, TpsUpdateMode.FAIL_ON_CONFLICT);
+    var newInputs =
+        new TpsPolicyInputs()
+            .inputs(List.of(new TpsPolicyInput().name("new_name").namespace("new_namespace")));
+    var result = dispatch.replacePao(existingPolicyId, newInputs, TpsUpdateMode.FAIL_ON_CONFLICT);
     assertNotNull(result);
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact updatePaoPreexistingNoConflicts(PactDslWithProvider builder) {
-    var updateRequestShape = new PactDslJsonBody()
-        .object("addAttributes", tpsPolicyInputsObjectShape)
-        .object("removeAttributes", tpsPolicyInputsObjectShape)
-        .stringMatcher("updateMode",
-            Arrays.stream(TpsUpdateMode.values()).map(TpsUpdateMode::getValue).collect(Collectors.joining("|"))
-        );
-    var updateResponseShape = new PactDslJsonBody()
-        .booleanType("updateApplied")
-        .object("conflicts", new PactDslJsonArray())
-        .object("resultingPao"); // TpsPaoGetResult
+    var updateRequestShape =
+        new PactDslJsonBody()
+            .object("addAttributes", tpsPolicyInputsObjectShape)
+            .object("removeAttributes", tpsPolicyInputsObjectShape)
+            .stringMatcher("updateMode", updateModeRegex);
+    var updateResponseShape =
+        new PactDslJsonBody()
+            .booleanType("updateApplied")
+            .object("conflicts", new PactDslJsonArray())
+            .object("resultingPao"); // TpsPaoGetResult
     return builder
-        .given(existingWorkspacePolicyState)
+        .given(existingPolicyState)
         .uponReceiving("A request to update a policy")
         .method("PATCH")
         .body(updateRequestShape)
         .headers(contentTypeJsonHeader)
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}",
-            "/api/policy/v1alpha1/pao/%s".formatted(objectId))
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s".formatted(existingPolicyId))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(updateResponseShape)
@@ -374,50 +381,48 @@ public class TpsApiTest {
   @Test
   @PactTestFor(pactMethod = "updatePaoPreexistingNoConflicts")
   public void updatingAnExistingPaoWithNoConflicts() throws Exception {
-    var remove = new TpsPolicyInputs().inputs(List.of(
-        new TpsPolicyInput().name("test_name").namespace("test_namespace")
-    ));
-    var add = new TpsPolicyInputs().inputs(List.of(
-        new TpsPolicyInput().name("new_name").namespace("new_namespace")
-    ));
-    var result = dispatch.updatePao(objectId, add, remove, TpsUpdateMode.FAIL_ON_CONFLICT);
+    var remove =
+        new TpsPolicyInputs()
+            .inputs(List.of(new TpsPolicyInput().name("test_name").namespace("test_namespace")));
+    var add =
+        new TpsPolicyInputs()
+            .inputs(List.of(new TpsPolicyInput().name("new_name").namespace("new_namespace")));
+    var result = dispatch.updatePao(existingPolicyId, add, remove, TpsUpdateMode.FAIL_ON_CONFLICT);
     assertNotNull(result);
   }
 
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact listValidRegions(PactDslWithProvider builder) {
     return builder
-        .given(existingWorkspacePolicyState)
-        .uponReceiving("A request to list the valid regions for a policy")
+        .given(existingPolicyState)
+        .uponReceiving("A request to list the valid regions for a policy using the id")
         .method("GET")
-        .query("platform=%s".formatted(CloudPlatform.AZURE.toTps()))
         .pathFromProviderState(
-            "/api/policy/v1alpha1/region/${objectId}/list-valid",
-            "/api/policy/v1alpha1/region/%s/list-valid".formatted(objectId))
+            "/api/policy/v1alpha1/region/%s/list-valid".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/region/%s/list-valid".formatted(existingPolicyId))
+        .matchQuery("platform", cloudPlatformTpsRegex)
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(new PactDslJsonArray().stringType())
         .toPact();
   }
 
-
   @Test
   @PactTestFor(pactMethod = "listValidRegions")
   public void listingValidRegionsOnAWorkspace() throws Exception {
-    var result = dispatch.listValidRegions(objectId, CloudPlatform.AZURE);
+    var result = dispatch.listValidRegions(existingPolicyId, CloudPlatform.AZURE);
     assertNotNull(result);
   }
-
 
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact listValidByPolicyInput(PactDslWithProvider builder) {
     return builder
-        .given(existingWorkspacePolicyState)
-        .uponReceiving("A request to list the valid regions for a policy")
+        .given(existingPolicyState)
+        .uponReceiving("A request to list the valid regions for a policy using policy input")
         .method("POST")
         .body(tpsPolicyInputsObjectShape)
-        .query("platform=%s".formatted(CloudPlatform.AZURE.toTps()))
         .path("/api/policy/v1alpha1/location/list-valid")
+        .matchQuery("platform", cloudPlatformTpsRegex)
         .headers(contentTypeJsonHeader)
         .willRespondWith()
         .status(HttpStatus.OK.value())
@@ -428,34 +433,36 @@ public class TpsApiTest {
   @Test
   @PactTestFor(pactMethod = "listValidByPolicyInput")
   public void listingValidRegionsOnAPolicy() throws Exception {
-    var inputs = new TpsPolicyInputs()
-        .inputs(List.of(new TpsPolicyInput().name("test_name").namespace("test_namespace")));
-    var tpsPao = new TpsPaoGetResult()
-        .objectId(objectId)
-        .attributes(inputs)
-        .effectiveAttributes(inputs);
+    var inputs =
+        new TpsPolicyInputs()
+            .inputs(List.of(new TpsPolicyInput().name("test_name").namespace("test_namespace")));
+    var tpsPao =
+        new TpsPaoGetResult()
+            .objectId(existingPolicyId)
+            .attributes(inputs)
+            .effectiveAttributes(inputs);
     var result = dispatch.listValidRegionsForPao(tpsPao, CloudPlatform.AZURE);
     assertNotNull(result);
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact explainingAWorkspacePolicy(PactDslWithProvider builder) {
-    var explainResponse = new PactDslJsonBody()
-        .numberType("depth")
-        .valueFromProviderState("objectId", "${objectId}", objectId.toString())
-        .object(
-            "policyInput",
-            new PactDslJsonBody().stringType("namespace").stringType("name").closeObject()
-        );
+    var explainResponse =
+        new PactDslJsonBody()
+            .numberType("depth")
+            .valueFromProviderState(
+                "objectId", existingPolicyProviderStateValue, existingPolicyId.toString())
+            .object(
+                "policyInput",
+                new PactDslJsonBody().stringType("namespace").stringType("name").closeObject());
     return builder
-        .given(existingWorkspacePolicyState)
+        .given(existingPolicyState)
         .uponReceiving("A request to explain the policy")
         .method("GET")
-        .query("depth=1")
         .pathFromProviderState(
-            "/api/policy/v1alpha1/pao/${objectId}/explain",
-            String.format("/api/policy/v1alpha1/pao/%s/explain", objectId))
+            "/api/policy/v1alpha1/pao/%s/explain".formatted(existingPolicyProviderStateValue),
+            "/api/policy/v1alpha1/pao/%s/explain".formatted(existingPolicyId))
+        .matchQuery("depth", "\\d+")
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(explainResponse)
@@ -465,35 +472,41 @@ public class TpsApiTest {
   @Test
   @PactTestFor(pactMethod = "explainingAWorkspacePolicy")
   public void explainingAPolicy() throws Exception {
-    var workspace = Workspace.builder()
-        .workspaceId(objectId)
-        .workspaceStage(WorkspaceStage.MC_WORKSPACE)
-        .createdByEmail("")
-        .build();
+    var workspace =
+        Workspace.builder()
+            .workspaceId(existingPolicyId)
+            .workspaceStage(WorkspaceStage.MC_WORKSPACE)
+            .createdByEmail("")
+            .build();
     var userRequest = mock(AuthenticatedUserRequest.class, RETURNS_SMART_NULLS);
     var workspaceService = mock(WorkspaceService.class);
     when(workspaceService.validateWorkspaceAndAction(any(), any(), any())).thenReturn(workspace);
-    var result = dispatch.explain(objectId, 1, workspaceService, userRequest);
+    var result = dispatch.explain(existingPolicyId, 1, workspaceService, userRequest);
     assertNotNull(result);
   }
 
-
   @Pact(consumer = "wsm", provider = "tps")
   public RequestResponsePact getLocationInfo(PactDslWithProvider builder) {
-    var locationArray = new PactDslJsonArray().eachArrayLike().object().stringType("name")
-        .stringType("description")
-        .object("regions", new PactDslJsonArray().stringType()).closeObject();
-    var responseShape = new PactDslJsonBody()
-        .stringType("name")
-        .stringType("description")
-        .object("regions", new PactDslJsonArray().stringType())
-        .object("locations", locationArray);
+    var locationArray =
+        new PactDslJsonArray()
+            .eachArrayLike()
+            .object()
+            .stringType("name")
+            .stringType("description")
+            .object("regions", new PactDslJsonArray().stringType())
+            .closeObject();
+    var responseShape =
+        new PactDslJsonBody()
+            .stringType("name")
+            .stringType("description")
+            .object("regions", new PactDslJsonArray().stringType())
+            .object("locations", locationArray);
     return builder
         .uponReceiving("A request for information about a location")
         .method("GET")
-        // TODO: find a way to improve query string matching (this may require updating pact
-        .query("platform=%s&location=%s".formatted(CloudPlatform.AZURE.toTps(), "europe"))
         .path("/api/policy/v1alpha1/location")
+        .matchQuery("platform", cloudPlatformTpsRegex)
+        .matchQuery("location", ".+", List.of("usa", "europe", "iowa"))
         .willRespondWith()
         .status(HttpStatus.OK.value())
         .body(responseShape)
@@ -502,10 +515,47 @@ public class TpsApiTest {
 
   @Test
   @PactTestFor(pactMethod = "getLocationInfo")
-  public void retrievingInformationOnARegion() throws Exception {
+  public void retrievingInformationOnALocation() throws Exception {
     var result = dispatch.getLocationInfo(CloudPlatform.AZURE, "europe");
     assertNotNull(result);
   }
 
+  /**
+   * The location parameter for PolicyApiController.getLocationInfo is marked as nullable, So
+   * presumably we can call TPS without the location. It would be nice to be able to specify this in
+   * a single pact, but the query arg matching doesn't give us that level of control
+   */
+  @Pact(consumer = "wsm", provider = "tps")
+  public RequestResponsePact getLocationInfoWithNullLocation(PactDslWithProvider builder) {
+    var locationArray =
+        new PactDslJsonArray()
+            .eachArrayLike()
+            .object()
+            .stringType("name")
+            .stringType("description")
+            .object("regions", new PactDslJsonArray().stringType())
+            .closeObject();
+    var responseShape =
+        new PactDslJsonBody()
+            .stringType("name")
+            .stringType("description")
+            .object("regions", new PactDslJsonArray().stringType())
+            .object("locations", locationArray);
+    return builder
+        .uponReceiving("A request for information about a null location")
+        .method("GET")
+        .path("/api/policy/v1alpha1/location")
+        .matchQuery("platform", cloudPlatformTpsRegex)
+        .willRespondWith()
+        .status(HttpStatus.OK.value())
+        .body(responseShape)
+        .toPact();
+  }
 
+  @Test
+  @PactTestFor(pactMethod = "getLocationInfoWithNullLocation")
+  public void retrievingInformationOnANullLocation() throws Exception {
+    var result = dispatch.getLocationInfo(CloudPlatform.AZURE, null);
+    assertNotNull(result);
+  }
 }
